objects/Opportunity_Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(Contact_Name__r.Account.Id, Contact_Name__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_NPN__c</fullName>
        <formula>Contact_Name__r.Broker_NPN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker NPN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>51+</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Firm Executive</fullName>
                    <label>Account Executive</label>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Primary Broker</fullName>
                    <label>Broker Agent of Record</label>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                    <isActive>false</isActive>
                    <label>Administrative</label>
                </value>
                <value>
                    <fullName>Adversary</fullName>
                    <isActive>false</isActive>
                    <label>Adversary</label>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <isActive>false</isActive>
                    <label>Agent</label>
                </value>
                <value>
                    <fullName>Broker for Client</fullName>
                    <isActive>false</isActive>
                    <label>Broker for Client</label>
                </value>
                <value>
                    <fullName>Consultant to Client</fullName>
                    <isActive>false</isActive>
                    <label>Consultant to Client</label>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                    <isActive>false</isActive>
                    <label>Decision Maker</label>
                </value>
                <value>
                    <fullName>Evaluator</fullName>
                    <isActive>false</isActive>
                    <label>Evaluator</label>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                    <isActive>false</isActive>
                    <label>Executive Sponsor</label>
                </value>
                <value>
                    <fullName>Full Service Producer</fullName>
                    <isActive>false</isActive>
                    <label>Full Service Producer</label>
                </value>
                <value>
                    <fullName>General Producer</fullName>
                    <isActive>false</isActive>
                    <label>General Producer</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                    <isActive>false</isActive>
                    <label>Group</label>
                </value>
                <value>
                    <fullName>Group Administrator</fullName>
                    <isActive>false</isActive>
                    <label>Group Administrator</label>
                </value>
                <value>
                    <fullName>Influencer - Positive</fullName>
                    <isActive>false</isActive>
                    <label>Influencer - Positive</label>
                </value>
                <value>
                    <fullName>Surveyor</fullName>
                    <isActive>false</isActive>
                    <label>Surveyor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Contact_Role_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Standard Contact Role ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This is a custom object to replicate the standard Opportunity Contact Role. It is created to support the updates to be sent to Broker Hub(632.0 project).</description>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>